--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore all environment files.
-/.env*
+# Ignore environment variables
+.env*
 
 # Ignore all logfiles and tempfiles.
 /log/*
